# parpriori

./: .gitignore  CHANGELOG.md  LICENSE  README.md  fix.py  parpriori.cabal  stack.yaml  test.txt
app/: Main.hs
app/dist-newstyle/cache/: compiler
data/: recipes.txt
dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
