cabal-version:      3.0
name:               parpriori
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Claire Liu
maintainer:         cl3944@columbia.edu
-- copyright:
-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable parpriori
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.0.0, containers, text, parallel
    hs-source-dirs:   app
    default-language: Haskell2010
